UCF-APR2.4/ftr main/force-app/main/default/objects/Group_Pricing_Matrix__c/Group_Pricing_Matrix__c.object-meta.xml
<CustomObject>
    <label>Group Pricing Matrix</label>
    <nameField>
        <displayFormat>GPM-{000000}</displayFormat>
        <label>Group Pricing Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Pricing Matrixs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>