UCF-APR2.4/ftr main/force-app/main/default/objects/Group_Pricing_Matrix__c/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <label>Group Id</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricing_Group</valueSetName>
    </valueSet>
</CustomField>