UCF-APR2.4/ftr main/force-app/main/default/objects/Group_Pricing_Matrix__c/fields/MRC__c.field-meta.xml
<CustomField>
    <fullName>MRC__c</fullName>
    <description>2 decimal places(round up 50)</description>
    <label>MRC</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>