UCF-APR2.4/ftr main/force-app/main/default/objects/Group_Pricing_Matrix__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Product code defined in the EPC</description>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>