UCF-APR2.4/ftr main/force-app/main/default/objects/Group_Pricing_Matrix__c/fields/Speed__c.field-meta.xml
<CustomField>
    <fullName>Speed__c</fullName>
    <description>Bandwidth of the Ethernet product, in megabytes.</description>
    <label>Speed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>