UCF-APR2.4/ftr main/force-app/main/default/objects/Group_Pricing_Matrix__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>12, 24, 36, 60</description>
    <label>Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>