UCF-APR2.4/ftr main/force-app/main/default/objects/Group_Pricing_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Group_Id__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Speed__c</columns>
    <columns>Term__c</columns>
    <columns>MRC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>